blue font main 2 free commercial;

--- a/themes/am_blue.css
+++ b/themes/am_blue.css
@@ -8,7 +8,7 @@
 
 
 :root{
-  --font-family-main: 'Latin Modern Math','Adobe Garamond','方正宋刻本秀楷简体','Calibri','楷体','华文中宋','楷体','霞鹜文楷 屏幕阅读版';  
+  --font-family-main: 'Latin Modern Math','Calibri','霞鹜文楷 GB','楷体';  
   --font-family-title: 'Optima LT Medium','Arial','方正苏新诗柳楷简体','黑体'; 
   --font-family-footer: 'Charm','Calibri','叶根友毛笔行书修正版','方正苏新诗柳楷简体','楷体';
   --font-family-code: 'Fira Code','HYMingChanKeBen W','Consolas','霞鹜文楷等宽','华文中宋','宋体';
